--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "jsbarcode": "^3.11.6",
     "next": "14.2.24",
     "react": "^18",
     "react-dom": "^18",
