Update next.config and fix deployment config

--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build && next export",
     "start": "next start",
     "lint": "next lint",
-    "deploy": "gh-pages -d out"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d out -t true"
   },
   "homepage": "https://theo-fortune.github.io/hngx-stage2-event-ticket",
   "dependencies": {
